--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_totaloda.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_totaloda.jrxml
@@ -12,14 +12,14 @@ MEMBER [Reporting Year].[First Year] AS [Reporting Year].[$P{FIRST_YEAR}]
 MEMBER [Reporting Year].[Second Year] AS [Reporting Year].[$P{SECOND_YEAR}]
 SELECT
 {[Reporting Year].[First Year], [Reporting Year].[Second Year]} ON ROWS,
-{[Measures].[Extended Amount]} ON COLUMNS
+{[Measures].[Extended Amount Currency]} ON COLUMNS
 FROM [Financial]]]>
 	</queryString>
 	<field name="Total Gross ODA Y1" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Reporting Year].[First Year])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount Currency], [Reporting Year].[First Year])]]></fieldDescription>
 	</field>
 	<field name="Total Gross ODA Y2" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Reporting Year].[Second Year])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount Currency], [Reporting Year].[Second Year])]]></fieldDescription>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
