--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.properties.xml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.properties.xml
@@ -13,8 +13,7 @@
 	<entry key="dashboards.org.filter">Organization</entry>
 	<entry key="dashboards.sector.filter">Sectors</entry>
 	<entry key="dashboards.biMultilateral.filter">BiMultilateral</entry>
-    <entry key="dashboards.table">Table Dashboard</entry>
-    <entry key="dashboards.typeOfFinance">Type of Finance Report</entry>
+    <entry key="dashboards.netODA">Net ODA</entry>
 	<entry key="dashboards.pieChart">Chart Dashboard</entry>
     <entry key="dashboards.typeOfAid">Aid Chart Report</entry>
 	<entry key="dashboards.columnChart">Column Chart Report</entry>
