--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/application.css
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/application.css
@@ -35,7 +35,9 @@ select, input[type="text"], input[type="password"], input[type="datetime"], inpu
 }
 
 .eubanner {
-    background: linear-gradient(45deg, #003399 0%, #000000 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background-position: 0 0;
+    background-color: #003399;
+    background-image: linear-gradient(45deg, #003399 0%, #000000 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002f8d', endColorstr='#000000',GradientType=1 );
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2) inset, 0 -3px 7px rgba(0, 0, 0, 0.2) inset;
     color: #FFFFFF;
